イベント詳細ページの作成

--- a/config/locales/ar_ja.yml
+++ b/config/locales/ar_ja.yml
@@ -4,8 +4,8 @@ ja:
       duel: デュエル
     attributes:
       duel:
-        winner: 勝者
-        loser: 敗者
+        winner_id: 勝者
+        loser_id: 敗者
         date: 対戦日
         life_points: 残りライフポイント
         content: 内容
